Changed the students menu into records

--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
         <a class="nav-link btn  submenu" href="#">&nbsp <i class="fas fa-list-ul"></i> Book List</a>
       </li>
     </ul>
-
-    <a href="#studentSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link btn "><i class="fas fa-user"></i> Students</a>
+      
+    <!--- Changed some words here --->
+    <a href="#studentSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link btn "><i class="fas fa-user"></i> Records</a> 
     <ul class="collapse list-unstyled" id="studentSubmenu">
       <li>
-        <a class="nav-link btn submenu" href="#">&nbsp <i class="fas fa-plus"></i> Add Student</a>
+        <a class="nav-link btn submenu" href="#">&nbsp <i class="fas fa-plus"></i> Add Record</a>
       </li>
       <li>
-        <a class="nav-link btn submenu" href="#">&nbsp <i class="fas fa-list-ul"></i> Student List</a>
+        <a class="nav-link btn submenu" href="#">&nbsp <i class="fas fa-list-ul"></i> Record List</a>
       </li>
     </ul>
 
