Fixed resizing bug and added Prateek's changes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
 
   <nav class="nav flex-column sidebar">
     <div class="header">
+      <span>
+         <i class="fas fa-bookmark fa-3x bookmark-icon"></i>
+       </span>
+      <span>
+        <h2>BookMark</h2>
+        <h6>Library Management</h6>
+      </span>
 
-      <h1>BookMark</h1>
-      <h6>Library Management</h6>
     </div>
     <div class="links-area">
 
@@ -46,9 +51,9 @@
         <a class="nav-link btn  submenu" href="#">&nbsp <i class="fas fa-list-ul"></i> Book List</a>
       </li>
     </ul>
-      
+
     <!--- Changed some words here --->
-    <a href="#studentSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link btn "><i class="fas fa-user"></i> Records</a> 
+    <a href="#studentSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link btn "><i class="fas fa-user"></i> Records</a>
     <ul class="collapse list-unstyled" id="studentSubmenu">
       <li>
         <a class="nav-link btn submenu" href="#">&nbsp <i class="fas fa-plus"></i> Add Record</a>
