Added icon and changed layout slightly

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
-  <title>BookMark | Library Management Ssstem </title>
+  <title>BookMark | Library Management System </title>
 </head>
 
 
@@ -31,11 +31,12 @@
   <nav class="nav flex-column sidebar">
     <div class="header">
       <span>
-         <i class="fas fa-bookmark fa-3x bookmark-icon"></i>
+         <!-- <i class="fas fa-bookmark "></i> -->
+         <i class="far fa-bookmark fa-3x bookmark-icon"></i>
        </span>
       <span>
         <h2>BookMark</h2>
-        <h6>Library Management</h6>
+        <h6>Library Manager</h6>
       </span>
 
     </div>
@@ -45,10 +46,10 @@
     <a href="#booksSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link btn "><i class="fas fa-book"></i>   Books</a>
     <ul class="collapse list-unstyled" id="booksSubmenu">
       <li>
-        <a class="nav-link btn  submenu" href="#">&nbsp <i class="fas fa-plus"></i>  Add Books</a>
+        <a class="nav-link btn  submenu" href="#">&nbsp &nbsp <i class="fas fa-plus"></i>  Add Books</a>
       </li>
       <li>
-        <a class="nav-link btn  submenu" href="#">&nbsp <i class="fas fa-list-ul"></i> Book List</a>
+        <a class="nav-link btn  submenu" href="#">&nbsp &nbsp <i class="fas fa-list-ul"></i> Book List</a>
       </li>
     </ul>
 
@@ -56,10 +57,10 @@
     <a href="#studentSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link btn "><i class="fas fa-user"></i> Records</a>
     <ul class="collapse list-unstyled" id="studentSubmenu">
       <li>
-        <a class="nav-link btn submenu" href="#">&nbsp <i class="fas fa-plus"></i> Add Record</a>
+        <a class="nav-link btn submenu" href="#">&nbsp &nbsp <i class="fas fa-plus"></i> Add Record</a>
       </li>
       <li>
-        <a class="nav-link btn submenu" href="#">&nbsp <i class="fas fa-list-ul"></i> Record List</a>
+        <a class="nav-link btn submenu" href="#">&nbsp &nbsp <i class="fas fa-list-ul"></i> Record List</a>
       </li>
     </ul>
 
